tests/calico_testcases/example_policies/testcase22-forbids-permits/testcase22-0-cnc-evaluation-service-open.yaml
# enables communication between all the pods that are part of the "cnc-evaluation-service" app
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase22-cnc-evaluation-service-open
  namespace: cnc-fe
spec:
  selector: app == 'cnc-evaluation-service'
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    source:
      selector: all()
      namespaceSelector: all()
  egress:
  - action: Allow
    destination:
      selector: all()
      namespaceSelector: all()
