tests/calico_testcases/example_policies/testcase22-forbids-permits/testcase22-3-traffic-between-compare-and-comply-no-out.yaml
# enables communication between all the pods that are part of the "cnc-evaluation-service" app
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: testcase22-1-global-compare-and-comply-only-internal
spec:
  selector: product == 'compare-and-comply'
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    source:
      namespaceSelector: all()
      selector: all()
  egress:
  - action: Allow
    destination:
      namespaceSelector: all()
      selector: all()
