tests/calico_testcases/example_policies/testcase22-forbids-permits/testcase22-4-empty-policy.yaml
# enables communication between all the pods that are part of the "cnc-evaluation-service" app
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: testcase22-4-empty-policy
spec:
  selector: noLabel == 'noExist'
  types:
  - Ingress
  - Egress
